Update relations protos to v1beta1 & move health protos
