# api/kessel/health/v1/health.pb.validate.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: health/v1/health.proto
+// source: kessel/health/v1/health.proto
 
 package v1
 
@@ -135,22 +135,22 @@ var _ interface {
 	ErrorName() string
 } = GetLivezRequestValidationError{}
 
-// Validate checks the field values on GetLivezReply with the rules defined in
-// the proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
-func (m *GetLivezReply) Validate() error {
+// Validate checks the field values on GetLivezResponse with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *GetLivezResponse) Validate() error {
 	return m.validate(false)
 }
 
-// ValidateAll checks the field values on GetLivezReply with the rules defined
-// in the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in GetLivezReplyMultiError, or
-// nil if none found.
-func (m *GetLivezReply) ValidateAll() error {
+// ValidateAll checks the field values on GetLivezResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// GetLivezResponseMultiError, or nil if none found.
+func (m *GetLivezResponse) ValidateAll() error {
 	return m.validate(true)
 }
 
-func (m *GetLivezReply) validate(all bool) error {
+func (m *GetLivezResponse) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
@@ -162,19 +162,19 @@ func (m *GetLivezReply) validate(all bool) error {
 	// no validation rules for Code
 
 	if len(errors) > 0 {
-		return GetLivezReplyMultiError(errors)
+		return GetLivezResponseMultiError(errors)
 	}
 
 	return nil
 }
 
-// GetLivezReplyMultiError is an error wrapping multiple validation errors
-// returned by GetLivezReply.ValidateAll() if the designated constraints
+// GetLivezResponseMultiError is an error wrapping multiple validation errors
+// returned by GetLivezResponse.ValidateAll() if the designated constraints
 // aren't met.
-type GetLivezReplyMultiError []error
+type GetLivezResponseMultiError []error
 
 // Error returns a concatenation of all the error messages it wraps.
-func (m GetLivezReplyMultiError) Error() string {
+func (m GetLivezResponseMultiError) Error() string {
 	var msgs []string
 	for _, err := range m {
 		msgs = append(msgs, err.Error())
@@ -183,11 +183,11 @@ func (m GetLivezReplyMultiError) Error() string {
 }
 
 // AllErrors returns a list of validation violation errors.
-func (m GetLivezReplyMultiError) AllErrors() []error { return m }
+func (m GetLivezResponseMultiError) AllErrors() []error { return m }
 
-// GetLivezReplyValidationError is the validation error returned by
-// GetLivezReply.Validate if the designated constraints aren't met.
-type GetLivezReplyValidationError struct {
+// GetLivezResponseValidationError is the validation error returned by
+// GetLivezResponse.Validate if the designated constraints aren't met.
+type GetLivezResponseValidationError struct {
 	field  string
 	reason string
 	cause  error
@@ -195,22 +195,22 @@ type GetLivezReplyValidationError struct {
 }
 
 // Field function returns field value.
-func (e GetLivezReplyValidationError) Field() string { return e.field }
+func (e GetLivezResponseValidationError) Field() string { return e.field }
 
 // Reason function returns reason value.
-func (e GetLivezReplyValidationError) Reason() string { return e.reason }
+func (e GetLivezResponseValidationError) Reason() string { return e.reason }
 
 // Cause function returns cause value.
-func (e GetLivezReplyValidationError) Cause() error { return e.cause }
+func (e GetLivezResponseValidationError) Cause() error { return e.cause }
 
 // Key function returns key value.
-func (e GetLivezReplyValidationError) Key() bool { return e.key }
+func (e GetLivezResponseValidationError) Key() bool { return e.key }
 
 // ErrorName returns error name.
-func (e GetLivezReplyValidationError) ErrorName() string { return "GetLivezReplyValidationError" }
+func (e GetLivezResponseValidationError) ErrorName() string { return "GetLivezResponseValidationError" }
 
 // Error satisfies the builtin error interface
-func (e GetLivezReplyValidationError) Error() string {
+func (e GetLivezResponseValidationError) Error() string {
 	cause := ""
 	if e.cause != nil {
 		cause = fmt.Sprintf(" | caused by: %v", e.cause)
@@ -222,14 +222,14 @@ func (e GetLivezReplyValidationError) Error() string {
 	}
 
 	return fmt.Sprintf(
-		"invalid %sGetLivezReply.%s: %s%s",
+		"invalid %sGetLivezResponse.%s: %s%s",
 		key,
 		e.field,
 		e.reason,
 		cause)
 }
 
-var _ error = GetLivezReplyValidationError{}
+var _ error = GetLivezResponseValidationError{}
 
 var _ interface {
 	Field() string
@@ -237,7 +237,7 @@ var _ interface {
 	Key() bool
 	Cause() error
 	ErrorName() string
-} = GetLivezReplyValidationError{}
+} = GetLivezResponseValidationError{}
 
 // Validate checks the field values on GetReadyzRequest with the rules defined
 // in the proto definition for this message. If any rules are violated, the
@@ -339,22 +339,22 @@ var _ interface {
 	ErrorName() string
 } = GetReadyzRequestValidationError{}
 
-// Validate checks the field values on GetReadyzReply with the rules defined in
-// the proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
-func (m *GetReadyzReply) Validate() error {
+// Validate checks the field values on GetReadyzResponse with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *GetReadyzResponse) Validate() error {
 	return m.validate(false)
 }
 
-// ValidateAll checks the field values on GetReadyzReply with the rules defined
-// in the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in GetReadyzReplyMultiError,
-// or nil if none found.
-func (m *GetReadyzReply) ValidateAll() error {
+// ValidateAll checks the field values on GetReadyzResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// GetReadyzResponseMultiError, or nil if none found.
+func (m *GetReadyzResponse) ValidateAll() error {
 	return m.validate(true)
 }
 
-func (m *GetReadyzReply) validate(all bool) error {
+func (m *GetReadyzResponse) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
@@ -366,19 +366,19 @@ func (m *GetReadyzReply) validate(all bool) error {
 	// no validation rules for Code
 
 	if len(errors) > 0 {
-		return GetReadyzReplyMultiError(errors)
+		return GetReadyzResponseMultiError(errors)
 	}
 
 	return nil
 }
 
-// GetReadyzReplyMultiError is an error wrapping multiple validation errors
-// returned by GetReadyzReply.ValidateAll() if the designated constraints
+// GetReadyzResponseMultiError is an error wrapping multiple validation errors
+// returned by GetReadyzResponse.ValidateAll() if the designated constraints
 // aren't met.
-type GetReadyzReplyMultiError []error
+type GetReadyzResponseMultiError []error
 
 // Error returns a concatenation of all the error messages it wraps.
-func (m GetReadyzReplyMultiError) Error() string {
+func (m GetReadyzResponseMultiError) Error() string {
 	var msgs []string
 	for _, err := range m {
 		msgs = append(msgs, err.Error())
@@ -387,11 +387,11 @@ func (m GetReadyzReplyMultiError) Error() string {
 }
 
 // AllErrors returns a list of validation violation errors.
-func (m GetReadyzReplyMultiError) AllErrors() []error { return m }
+func (m GetReadyzResponseMultiError) AllErrors() []error { return m }
 
-// GetReadyzReplyValidationError is the validation error returned by
-// GetReadyzReply.Validate if the designated constraints aren't met.
-type GetReadyzReplyValidationError struct {
+// GetReadyzResponseValidationError is the validation error returned by
+// GetReadyzResponse.Validate if the designated constraints aren't met.
+type GetReadyzResponseValidationError struct {
 	field  string
 	reason string
 	cause  error
@@ -399,22 +399,24 @@ type GetReadyzReplyValidationError struct {
 }
 
 // Field function returns field value.
-func (e GetReadyzReplyValidationError) Field() string { return e.field }
+func (e GetReadyzResponseValidationError) Field() string { return e.field }
 
 // Reason function returns reason value.
-func (e GetReadyzReplyValidationError) Reason() string { return e.reason }
+func (e GetReadyzResponseValidationError) Reason() string { return e.reason }
 
 // Cause function returns cause value.
-func (e GetReadyzReplyValidationError) Cause() error { return e.cause }
+func (e GetReadyzResponseValidationError) Cause() error { return e.cause }
 
 // Key function returns key value.
-func (e GetReadyzReplyValidationError) Key() bool { return e.key }
+func (e GetReadyzResponseValidationError) Key() bool { return e.key }
 
 // ErrorName returns error name.
-func (e GetReadyzReplyValidationError) ErrorName() string { return "GetReadyzReplyValidationError" }
+func (e GetReadyzResponseValidationError) ErrorName() string {
+	return "GetReadyzResponseValidationError"
+}
 
 // Error satisfies the builtin error interface
-func (e GetReadyzReplyValidationError) Error() string {
+func (e GetReadyzResponseValidationError) Error() string {
 	cause := ""
 	if e.cause != nil {
 		cause = fmt.Sprintf(" | caused by: %v", e.cause)
@@ -426,14 +428,14 @@ func (e GetReadyzReplyValidationError) Error() string {
 	}
 
 	return fmt.Sprintf(
-		"invalid %sGetReadyzReply.%s: %s%s",
+		"invalid %sGetReadyzResponse.%s: %s%s",
 		key,
 		e.field,
 		e.reason,
 		cause)
 }
 
-var _ error = GetReadyzReplyValidationError{}
+var _ error = GetReadyzResponseValidationError{}
 
 var _ interface {
 	Field() string
@@ -441,4 +443,4 @@ var _ interface {
 	Key() bool
 	Cause() error
 	ErrorName() string
-} = GetReadyzReplyValidationError{}
+} = GetReadyzResponseValidationError{}
